Fix announcement and trending container spacing

--- a/styles.css
+++ b/styles.css
@@ -149,8 +149,8 @@ ul{
   height: 2rem;
   line-height: 2rem;
   border-radius: 5px;
-  background-color: var(--color1);
-  color: var(--color4);
+  background-color: var(--color2);
+  color: var(--color1);
   text-align: center;
   transition: 0s;
   opacity: 0;
@@ -257,7 +257,7 @@ ul{
   background-color: var(--color3);
   display: grid;
   grid-template-columns: minmax(300px, 3fr) minmax(250px, 1fr);
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: min-content 1fr;
   gap: 1rem;
   padding:2rem 1.5rem;
 }
